--- a/test.ipynb
+++ b/test.ipynb
@@ -9,14 +9,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test\n"
+      "['varaince', 'skewness']\n"
      ]
     }
    ],
    "source": [
-    "val = b\"forca\"\n",
-    "print(\"test\")"
+    "names = \"varaince skewness\"\n",
+    "test = names.split(\" \")\n",
+    "print(test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def quick_table(vars):\n",
+    "    names = vars.split(\",\")\n",
+    "    print(names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hey', 'Jude']\n"
+     ]
+    }
+   ],
+   "source": [
+    "quick_table(\"hey,Jude\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ordinal_probability(ordinal: int, r: float):\n",
+    "    s = logistic_map_no_transients(r, 0.1)\n",
+    "    syms = [ordinal_symbol(s[xi:xi+3])for xi in range(len(s)-3)] \n",
+    "    return syms.count(ordinal)/len(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
